--- a/items_frame_v2.html
+++ b/items_frame_v2.html
@@ -2940,3 +2940,5 @@ img: "https://drive.google.com/thumbnail?id=12qLIcjRkaceOzkAZMtVTquTZs5ukGlrR"
   parent.postMessage({ __splitData: true, key: 'items', data: data }, '*');
 })();
 </script>
+
+<script>window.items = (window.items||data); window.ITEMS = window.items;</script>
