--- a/sets_frame.html
+++ b/sets_frame.html
@@ -29,8 +29,10 @@
   .pbtn[disabled]:hover{background:#fff}
   .pbtn.active{background:#2b115f;color:#fff;border-color:#2b115f}
   .pdots{color:#777;font-size:12px;padding:0 4px}
-  dialog{border:0;padding:0;border-radius:18px;max-width:min(980px,96vw);width:980px;box-shadow:0 20px 70px rgba(0,0,0,.22)}
+  dialog{position:fixed;inset:0;margin:auto;border:0;padding:0;border-radius:18px;max-width:min(980px,96vw);width:980px;box-shadow:0 20px 70px rgba(0,0,0,.22)}
   dialog::backdrop{background:rgba(0,0,0,.35)}
+  @media (max-width:768px){dialog{width:96vw;max-width:96vw}.dlg{max-height:92vh}}
+
   .dlg{display:flex;flex-direction:column;max-height:88vh;background:#fff;border-radius:18px;overflow:hidden}
   .dlgHead{display:flex;justify-content:space-between;align-items:flex-start;gap:10px;padding:14px 16px;border-bottom:1px solid #eee;background:#fff}
   .dlgTitle{display:flex;flex-direction:column;gap:4px}
@@ -437,6 +439,9 @@ function trim(s){ return norm(s).trim(); }
   function openSet(set){
     if(!set) return;
 
+    // ✅ prevent mobile scroll jump when opening <dialog>
+    const __scrollY = window.scrollY || document.documentElement.scrollTop || 0;
+
     dlgMain.textContent = displayName(set);
     dlgNames.innerHTML = "";
     for(const line of allNames(set)){
@@ -574,7 +579,19 @@ function trim(s){ return norm(s).trim(); }
         // variants
     renderVariants(set);
 
+    // ✅ always start at top inside dialog
+    const __dlgBody = dlg ? dlg.querySelector('.dlgBody') : null;
+    if(__dlgBody) __dlgBody.scrollTop = 0;
+
     if(dlg && dlg.showModal) dlg.showModal();
+
+    // ✅ restore page scroll (some mobile browsers scroll to the dialog element)
+    requestAnimationFrame(()=>{
+      try{
+        window.scrollTo(0, __scrollY);
+        if(__dlgBody) __dlgBody.scrollTop = 0;
+      }catch(e){}
+    });
   }
 
 
