--- a/sets_frame.html
+++ b/sets_frame.html
@@ -31,8 +31,10 @@
   .pdots{color:#777;font-size:12px;padding:0 4px}
   dialog{position:fixed;inset:0;margin:auto;border:0;padding:0;border-radius:18px;max-width:min(980px,96vw);width:980px;box-shadow:0 20px 70px rgba(0,0,0,.22)}
   dialog::backdrop{background:rgba(0,0,0,.35)}
-  @media (max-width:768px){dialog{width:96vw;max-width:96vw}.dlg{max-height:92vh}}
-
+  @media (max-width:768px){
+    dialog{width:96vw;max-width:96vw}
+    .dlg{max-height:92vh}
+  }
   .dlg{display:flex;flex-direction:column;max-height:88vh;background:#fff;border-radius:18px;overflow:hidden}
   .dlgHead{display:flex;justify-content:space-between;align-items:flex-start;gap:10px;padding:14px 16px;border-bottom:1px solid #eee;background:#fff}
   .dlgTitle{display:flex;flex-direction:column;gap:4px}
@@ -273,12 +275,12 @@ function trim(s){ return norm(s).trim(); }
 
   // ✅ 리스트 화면에서는 중국어를 보여주지 않음 (영어/일본어 우선)
   function listMainName(set){
-    return trim(set.name_jp) || trim(set.name_en) || trim(set.name_na) || trim(set.name_kr) || trim(set.name) || "이름없음";
+    return trim(set.name_en) || trim(set.name_jp) || trim(set.name_na) || trim(set.name_kr) || trim(set.name) || "이름없음";
   }
 
   function listSubName(set){
     // 서브 라인은 일본어만 (없으면 비움)
-    return trim(set.name_en) || "";
+    return trim(set.name_jp) || "";
   }
 
   // ✅ 상세 팝업에서는 중국어 포함 전체 이름 표시
@@ -439,9 +441,6 @@ function trim(s){ return norm(s).trim(); }
   function openSet(set){
     if(!set) return;
 
-    // ✅ prevent mobile scroll jump when opening <dialog>
-    const __scrollY = window.scrollY || document.documentElement.scrollTop || 0;
-
     dlgMain.textContent = displayName(set);
     dlgNames.innerHTML = "";
     for(const line of allNames(set)){
@@ -579,19 +578,10 @@ function trim(s){ return norm(s).trim(); }
         // variants
     renderVariants(set);
 
-    // ✅ always start at top inside dialog
-    const __dlgBody = dlg ? dlg.querySelector('.dlgBody') : null;
-    if(__dlgBody) __dlgBody.scrollTop = 0;
-
-    if(dlg && dlg.showModal) dlg.showModal();
-
-    // ✅ restore page scroll (some mobile browsers scroll to the dialog element)
-    requestAnimationFrame(()=>{
-      try{
-        window.scrollTo(0, __scrollY);
-        if(__dlgBody) __dlgBody.scrollTop = 0;
-      }catch(e){}
-    });
+    try{ parent.postMessage({type:'SETS_DIALOG_OPEN'}, '*'); }catch(e){}
+    try{ const bodyEl = document.querySelector('.dlgBody'); if(bodyEl) bodyEl.scrollTop = 0; }catch(e){}
+    try{ if(dlg && dlg.showModal) dlg.showModal(); }catch(e){ try{ if(dlg) dlg.setAttribute('open',''); }catch(_e){} }
+    requestAnimationFrame(()=>{ try{ const bodyEl = document.querySelector('.dlgBody'); if(bodyEl) bodyEl.scrollTop = 0; }catch(e){} });
   }
 
 
